[package]
name = "m2-ctrl"
version = "1.0.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope secondary mirror control system"
repository = "https://github.com/rconan/m2-ctrl"
documentation = "https://docs.rs/m2-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace]
members = ["fsm", "asm"]

[dependencies]
fsm = { version = "0.1.0", package = "m2-ctrl_fsm", path = "fsm", optional = true }
asm = { version = "0.1.0", package = "m2-ctrl_asm", path = "asm", optional = true }

[package.metadata.docs.rs]
features = ["fsm"]
