[package]
name = "m2-ctrl"
version = "1.0.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope secondary mirror control system"
repository = "https://github.com/rconan/m2-ctrl"
documentation = "https://docs.rs/m2-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace]
members = ["fsm", "asm"]

[dependencies]
fsm = { version = "0.1.0", package = "m2-ctrl_fsm", path = "fsm", optional = true }
asm = { version = "0.1.0", package = "m2-ctrl_asm", path = "asm", optional = true }

[workspace.dependencies]
paste = "1.0.6"
simulink-binder = "0.1.1"
dos-actors = { version = "3.0.1", package = "gmt_dos-actors", path = "../dos-actors" }
log = "0.4.17"
cc = "1.0.73"
fem = { version = "0.3.0", path = "../fem", package = "gmt-fem" }

[package.metadata.docs.rs]
features = ["fsm"]
